--- a/webfiles/voxy.css
+++ b/webfiles/voxy.css
@@ -20,5 +20,34 @@ h2{
     border: 1px solid #000000;
     position: absolute;
     left: 0;
+    top: 30px;
+}
+
+#header
+{
+    margin: 0;
+    padding: 5px;
+    position: absolute;
+    left: 10px;
     top: 0;
+}
+
+#header h2
+{
+    font-size: 15px;
+    margin-top: 0;
+    display: inline;
+}
+
+#header a
+{
+    margin-left: 10px;
+    padding: 3px;
+    background-color: #eee;
+    border: 1px solid black;
+}
+
+#logarea
+{
+    display: none;
 }
