license / restrictions / features upd

--- a/index.haml
+++ b/index.haml
@@ -31,11 +31,15 @@
                 %h3 特徴
                 %p
                   VoXYは、幅広いクライアントと通信環境をサポートします。
-                %p
-                  VoXYクライアントは、HTMLとJavascriptのみで書かれており、FlashやJavaApplet等のブラウザ拡張を要求しません。
-                  サーバとの通信は全てHTTPを用いて行われています。
-                  特殊なポートを利用しないので、モバイル回線や企業内LANなどの制約の強い通信環境でも動作することが期待されます。
-                  場合によっては、VNCの通信に制限がかけられている環境でも、VoXYを用いればデスクトップにアクセスすることができます。
+                %ul
+                  %li クライアント側はWebブラウザさえあればOKです。
+                  %ul
+                    %li クライアントソフトウェアのインストールは要りません
+                    %li 出先で急にアクセスしたくなったときでも、ネットカフェ等から簡単にアクセスできます
+                    %li ウェブブラウザを備えた端末ならほとんど何でも動作します。Wiiなどのゲーム機や、ネット対応TVなども利用可能
+                  %li クライアントとの通信にはHTTPのみを利用します
+                  %ul
+                    %li 企業等、制限の強いネットワーク環境下でVNCプロトコルがサポートされていなくても問題ありません
                 %h3 構成
                 %p
                   VoXYは、以下のような構成で動作します。
@@ -44,6 +48,11 @@
                   VoXYは、Webブラウザ上で動作するVNCクライアントです。しかし、通常WebブラウザはHTTPのみをサポートするため、から直接VNCサーバに接続することはできません。
                 %p
                   そこで、VoXYではProxyサーバを用いることによって、VNCサーバに代わりにアクセスし、画面やユーザ入力の情報をHTTP経由で提供します。
+                %p
+                  VoXYクライアントは、HTMLとJavascriptのみで書かれており、FlashやJavaApplet等のブラウザ拡張を要求しません。
+                  サーバとの通信は全てHTTPを用いて行われています。
+                  特殊なポートを利用しないので、モバイル回線や企業内LANなどの制約の強い通信環境でも動作することが期待されます。
+                  場合によっては、VNCの通信に制限がかけられている環境でも、VoXYを用いればデスクトップにアクセスすることができます。
             .post
               %a{:name => "install"}/
               %h2.title 導入方法
@@ -67,6 +76,7 @@
                   %ul
                     %li Cherrypy (ver. 3.1.2で動作確認)
                     %li twisted (ver. 10.1.0 / 9.0.0で動作確認)
+                    %li Python Imaging Library (ver. 1.1.7で動作確認)
                 %p
                   これらは、Debian環境では以下のコマンドで導入することができます。
                 %pre
@@ -141,9 +151,17 @@
                   画面のサムネイルをクリックすると、ホストの詳細画面に移動します。
                   %img{:src => "images/voxy3.png", :width => 400}
                 %p
-                  この画面では、接続先のホストに対してマウス操作を行うことができます。
-                  (キーボード操作は実装中です)
+                  この画面では、接続先のホストに対してキーボード、:マウス操作を行うことができます。
+                  (一部の特殊キーは動作しません)
                   操作を終えたら、ブラウザの戻るボタンを押すことで、ホスト一覧画面に戻ることができます。
+            .post
+              %a{:name => "license"}/
+              %h2.title ライセンス
+              .entry
+                %p
+                  このソフトウェアは
+                  %a{:href => "https://github.com/ddk50/voxy/blob/master/LICENSE"}MIT License
+                  の下で提供されています。
           / end content
           / start sidebar
           #sidebar
@@ -157,6 +175,8 @@
                     %a{:href => "#install"} 導入方法
                   %li
                     %a{:href => "#usage"} 使い方
+                  %li
+                    %a{:href => "#license"} ライセンス
           / end sidebar
           %div{:style => "clear: both;"}  
     / end page
