--- a/index.haml
+++ b/index.haml
@@ -28,6 +28,7 @@
                   %strong> VoXY
                   はWebブラウザベースのVNCクライアント環境です。
                   VoXYを使えば、Webブラウザが使える環境ならどこからでも、あなたのデスクトップにアクセスすることができます。
+                  <object width="425" height="344"><param name="movie" value="http://www.youtube.com/v/Y47yX4JkPsU?hl=ja&fs=1"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/Y47yX4JkPsU?hl=ja&fs=1" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="425" height="344"></embed></object>
                 %h3 特徴
                 %p
                   VoXYは、幅広いクライアントと通信環境をサポートします。
